Fix video embeds rendering behind tagged media

--- a/app/styles/layout/_feeds.scss
+++ b/app/styles/layout/_feeds.scss
@@ -1186,8 +1186,16 @@
       height: 50px;
       fill-opacity: 0.9;
     }
+    .lazy-image {
+      display: block;
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
     img {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
   .embed-article {
